Add timer, correct and wrong answer handlers

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.24.0",
     "react": "^16.8.6",
+    "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^16.8.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^3.0.1"
