--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start:lambda": "netlify-lambda serve src/lambda",
-    // "build": "run-p build:**",
-    "build": "npm build",
+    "build": "run-p build:**",
     "build:app": "react-scripts build",
     "build:lambda": "netlify-lambda build src/lambda",
     "test": "react-scripts test",
